<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ip_status_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hostname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/diag_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="0dip"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/autofill" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipaddr"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/diag_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/autofill" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macaddr"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/diag_mac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/autofill" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiry"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/diag_unix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/autofill" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:gravity="right" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/diag_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/autofill" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <FrameLayout android:id="@+id/frameLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.70"></FrameLayout>
        <TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/blank_string" android:layout_weight="0.70" android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:id="@+id/bt_ssh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.99"
            android:text="@string/ip_diag_ssh" />

        <Button
            android:id="@+id/bt_telnet"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.98"
            android:text="@string/ip_dia_telnet" />

        <Button android:id="@+id/bt_http" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="0.99" android:text="@string/ip_diag_http"/>

        <Button
            android:id="@+id/bt_https"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.98"
            android:text="@string/ip_diag_https" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/back_btn"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:text="@string/back" android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
